.env.example überarbeitet

--- a/book-api/.env.example
+++ b/book-api/.env.example
@@ -1,3 +1,11 @@
+# Dieses Projekt verwendet Umgebungsvariablen, um Konfigurationen zu speichern.
+# Diese Datei ist ein Beispiel und sollte in .env umbenannt werden.
+# Und eine Zusatzdatei .env.dev erstellt werden da den unteren Inhalt einfügen.
+
+### --------------------------------------------------------------------------------------------------------------------------------------------------------
+
+# .env
+
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
@@ -28,6 +36,10 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+### ------------------------------------------------------------------------------------------------------------------------------------------------------
+
+# env.dev
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
